fix some minor issues re styling image-icon was not properly aligned

--- a/packages/account/src/Styles/account.scss
+++ b/packages/account/src/Styles/account.scss
@@ -1254,7 +1254,7 @@ $MIN_HEIGHT_FLOATING: calc(
 /** @define forgot-password; weak */
 .forgot-password {
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     grid-row-gap: 16px;
     max-width: 400px;
     margin: 24px auto 0;
