--- a/packages/trader/src/sass/app/modules/reports.scss
+++ b/packages/trader/src/sass/app/modules/reports.scss
@@ -941,7 +941,9 @@ $side-padding: 1.2em;
     flex-flow: column nowrap;
     align-items: center;
     justify-content: center;
+    padding-right: 28%;
     margin: auto;
+    margin-top: 20%;
 
     &__icon {
         width: 96px;
